Prepare for GitHub Pages deployment

--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Hemanth Sayimpu</title>
-    <meta name="title" content="Seyi — Developer" />
+    <meta name="title" content="Hemanth — Developer" />
     <link rel="icon" href="/logo.ico" />
     <meta
       name="description"
@@ -14,7 +14,7 @@
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image" />
     <meta property="twitter:url" content="https://your-website-url.com" />
-    <meta property="twitter:title" content="Hemanth Sayimpu — Developer" />
+    <meta property="twitter:title" content="Hemanth Sayimpu — Full Stack Developer" />
     <meta
       property="twitter:description"
       content="Full Stack Developer based in Guntur, India. Focused on creating interactive digital experiences on the web."
@@ -27,7 +27,7 @@
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://your-website-url.com" />
-    <meta property="og:title" content="Sharlee — Developer" />
+    <meta property="og:title" content="Hemanth Sayimpu — Full Stack Developer" />
     <meta
       property="og:description"
       content="Front End Developer based in Guntur, India, focused on creating interactive digital experiences on the web."
