Prepare for GitHub Pages deployment

--- a/src/index.html
+++ b/src/index.html
@@ -30,7 +30,7 @@
     <meta property="og:title" content="Hemanth Sayimpu — Full Stack Developer" />
     <meta
       property="og:description"
-      content="Front End Developer based in Guntur, India, focused on creating interactive digital experiences on the web."
+      content="Full Stack Developer based in Guntur, India. Focused on creating interactive digital experiences on the web."
     />
     <meta property="og:image" content="https://your-image-url.com/image.jpg" />
 
