--- a/src/index.html
+++ b/src/index.html
@@ -66,7 +66,7 @@
 
         <div class="home__nav__right">
           <div class="nav__folio hide-desktop" nav-anim>
-            Frontend Developer <br />
+            Full Stack Developer <br />
             Folio / 2021 — 2023
           </div>
 
